# cubevis

./: pyproject.toml  readme.rst
.github/workflows/: publish.yml  pylint.yml
cubevis/apps/: _interactiveclean.mustache
cubevis/private/apps/: _interactiveclean.mustache  _interactiveclean.py
cubevis/private/casashell/: createmask.mustache  iclean.mustache
cubevis/private/casatasks/: createmask.mustache  createregion.mustache  iclean.mustache
cubevisjs/: package-lock.json  package.json  readme.md
cubevisjs/src/bokeh/annotations/: ev_poly_annotation.ts
cubevisjs/src/bokeh/format/: wcs_ticks.ts
cubevisjs/src/bokeh/models/: edit_span.ts  ev_text_input.ts  tip.ts  tip_button.ts
cubevisjs/src/bokeh/sources/: data_pipe.ts  image_data_source.ts  image_pipe.ts  spectra_data_source.ts  updatable_data_source.ts
cubevisjs/src/bokeh/tools/: cbreset_tool.ts  drag_tool.ts
scripts/: expand_templates
