[project]
name = "cubevis"
dynamic = ["version"]
description = "visualization toolkit and apps for casa"
authors = [
    {name = "Darrell Schiebel", email = "darrell@schiebel.us"},
    {name = "Pam Harris", email = "pharris@nrao.edu"},
]

dependencies = [
    "bokeh==3.6.1",
    "astropy>=5.1",
    "regions>=0.6",
    "websockets>=10.3",
    "certifi",
    "matplotlib",
]
requires-python = ">=3.10"
readme = "readme.rst"
license = {text = "LGPL"}

[project.urls]
"Homepage" = "https://github.com/casangi/cubevis?tab=readme-ov-file#cubevis---visualization-tools-for-casa-images"
"Source" = "https://github.com/casangi/cubevis"
"Bug Tracker" = "https://github.com/casangi/cubevis/issues"

[tool]
[tool.pdm]
[tool.pdm.build]
excludes = [ "cubevis/apps/*.mustache", "cubevis/private/casashell/*.mustache", "cubevis/private/casatasks/*.mustache", "**/*.xml", "**/*.py-*", "**/*~" ]

[tool.pdm.version]
source = "scm"
write_to = "cubevis/__version__.py"
write_template = "__version__ = '{}'"  # optional, default to "{}"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
